--- a/rivabot/index.html
+++ b/rivabot/index.html
@@ -138,6 +138,7 @@ rivabot.2024
  <div class="date-container">
  
     <div class="date" id="dateDisplay"></div>
+<a href="index.html" class="button">Refresh</a>
     <button onclick="sendMessage()" id="writeButton"style="cursor:pointer;">Radio</button>
     <button onclick="sendMessage()" id="writeButton2"style="cursor:pointer;">Music</button>
     <button onclick="sendMessage()" id="writeButton3"style="cursor:pointer;">قرآن كريم</button>
@@ -145,7 +146,7 @@ rivabot.2024
     <button class="toggle-button123" onclick="toggleIframeee()"style="cursor:pointer;">أخبار اليوم</button>
     
      <div id="news-container"style="display:none;">
-        <h1>Latest News</h1>
+        <h6>آخر الأخبار</h6>
         <ul id="news-list"></ul>
     </div>
 
