--- a/rivabot/index.html
+++ b/rivabot/index.html
@@ -138,7 +138,7 @@ rivabot.2024
  <div class="date-container">
  
     <div class="date" id="dateDisplay"></div>
-<a href="index.html" class="button">Refresh</a>
+<a href="index.html" class="button"style="background-color:white;cursor:pointer;">Refresh</a>
     <button onclick="sendMessage()" id="writeButton"style="cursor:pointer;">Radio</button>
     <button onclick="sendMessage()" id="writeButton2"style="cursor:pointer;">Music</button>
     <button onclick="sendMessage()" id="writeButton3"style="cursor:pointer;">قرآن كريم</button>
