--- a/rivabot/index.html
+++ b/rivabot/index.html
@@ -143,7 +143,7 @@ rivabot.2024
     <button onclick="sendMessage()" id="writeButton2"style="cursor:pointer;">Music</button>
     <button onclick="sendMessage()" id="writeButton3"style="cursor:pointer;">قرآن كريم</button>
     <button onclick="sendMessage()" id="writeButton4"style="cursor:pointer;">أخبار</button>
-    <button class="toggle-button123" onclick="toggleIframeee()"style="cursor:pointer;">أخبار اليوم</button>
+    <button class="toggle-button123x" onclick="toggleIframeeex()"style="cursor:pointer;">أخبار اليوم</button>
       <button onclick="sendMessage()" id="writeButton5"style="cursor:pointer;">الطقس</button>
     <button onclick="sendMessage()" id="writeButton6"style="cursor:pointer;">الرياضة</button>
      
